--- a/app/styles/components/c-footer.scss
+++ b/app/styles/components/c-footer.scss
@@ -3,6 +3,15 @@
 .c-footer {
   background-color: $color-19;
   padding-top: 55px;
+  transition: transform .25s ease;
+
+  &.-expanded {
+    left: 0;
+    position: absolute;
+    transform: translate(0, calc(-100% - #{$footer-mini-height}));
+    width: 100%;
+    z-index: 100;
+  }
 
   .logos-footer {
     border-bottom: 1px solid rgba($color-4, .2);
