Refactor Map Footer (old Mini Footer) and implemented Footer component with transition

--- a/app/styles/components/c-footer.scss
+++ b/app/styles/components/c-footer.scss
@@ -2,15 +2,26 @@
 
 .c-footer {
   background-color: $color-19;
-  padding-top: 55px;
-  transition: transform .25s ease;
+  padding: 55px 0 0;
+
+  &.-map {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    transform: translate(0, 0);
+    transition: max-height .25s ease, transform .25s ease;
+    z-index: 100;
+  }
 
   &.-expanded {
+    height: 90%;
     left: 0;
-    position: absolute;
-    transform: translate(0, calc(-100% - #{$footer-mini-height}));
+    max-height: 100%;
+    overflow: auto;
+    padding: 55px 0 0;
+    transform: translate(0, calc(-100% - #{$map-footer-height}));
     width: 100%;
-    z-index: 100;
   }
 
   .logos-footer {
