--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -9,7 +9,7 @@ $wrap-mobile: 25px;
 // what size should have wraps in tablet.
 $wrap-tablet: 55px;
 $wrap-desktop: 115px;
-$footer-mini-height: 38px;
+$map-footer-height: 38px;
 
 $header-height: 95px;
 $accordion-mobile-height: 60px;
