--- a/app/styles/components/c-vessel-info-panel.scss
+++ b/app/styles/components/c-vessel-info-panel.scss
@@ -19,10 +19,10 @@
     width: 26px;
 
     > .cross {
-      stroke: $color-7;
       height: 11px;
       left: 50%;
       position: absolute;
+      stroke: $color-7;
       top: 50%;
       transform: translate(-50%, -50%);
       width: 11px;
@@ -70,10 +70,11 @@
     }
 
     .zoom {
-      font-family: $font-family-1;
       color: $color-3;
-      text-decoration: underline;
       cursor: pointer;
+      display: block;
+      font-family: $font-family-1;
+      text-decoration: underline;
     }
   }
 }
