--- a/app/styles/components/map/c-timeline.scss
+++ b/app/styles/components/map/c-timeline.scss
@@ -33,8 +33,8 @@
   }
 
   .c-timeline-outer-brush-handle {
+    cursor: ew-resize;
     fill: $color-3;
-    pointer-events: none;
     width: 4px;
   }
 
