--- a/app/styles/components/map/c-durationpicker.scss
+++ b/app/styles/components/map/c-durationpicker.scss
@@ -13,6 +13,7 @@
   position: absolute;
   text-align: center;
   top: 0;
+  transform: translate(15px, 0);
   z-index: 99;
 
   .c-durationpicker-text {
