Fixed footer transition for Safari and iOS devices

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -10,6 +10,7 @@ $wrap-mobile: 25px;
 $wrap-tablet: 55px;
 $wrap-desktop: 115px;
 $map-footer-height: 38px;
+$max-map-footer-height: 485px;
 
 $header-height: 95px;
 $accordion-mobile-height: 60px;
