Added responsive styles for map controls

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -60,7 +60,7 @@ $color-13: #2b4f93;
 $color-19: #174084; // UI kit map
 $color-20: #bfbfbf;
 $color-21: #121a2a; // UI kit map
-$color-22: rgba(7, 51, 56, .3); // UI kit map
+$color-22: #073338; // UI kit map
 $color-23: #032044; // used for gradient at homepage
 $color-24: rgba(3, 32, 68, 0); // used for gradient at homepage
 $color-25: rgba(255, 255, 255, .7); // image attribution
