--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -1,3 +1,5 @@
+@import 'settings';
+
 .icon {
   display: inline-block;
   fill: currentColor;
@@ -21,4 +23,10 @@
 
 .icon-report-icon {
   width: .8125em;
+}
+
+.icon-share {
+  fill: $color-4;
+  height: 16px;
+  width: 19px;
 }
