--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -30,3 +30,15 @@
   height: 16px;
   width: 19px;
 }
+
+.icon-zoom-in {
+  fill: $color-4;
+  height: 13px;
+  width: 13px;
+}
+
+.icon-zoom-out {
+  fill: $color-4;
+  height: 3px;
+  width: 13px;
+}
