Added attributions on map for mobile (#418)
* Added attributions on map for mobile

* Added gradient to improve text legibility

--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -11,6 +11,37 @@
   z-index: 5;
 }
 
+.attributions-container {
+  background-image: linear-gradient(to bottom, rgba(0, 17, 55, .9), rgba(8, 23, 54, 0));
+  height: 40px;
+  left: 50%;
+  position: absolute;
+  text-align: center;
+  top: calc(#{$header-height} + #{$accordion-mobile-height});
+  transform: translate(-50%, 0);
+  width: 100%;
+  z-index: 101;
+
+  @media #{$mq-tablet} {
+    display: none;
+  }
+}
+
+.attributions-container > .mobile-map-attributions {
+  color: rgba($color-4, .6);
+  display: inline-block;
+  font-size: $font-size-xxs-small;
+
+  margin: 3px 0 0;
+  max-width: 400px;
+  text-align: center;
+
+  > .link {
+    color: inherit;
+    font-size: inherit;
+  }
+}
+
 .zoom-controls {
   bottom: 135px;
   left: 35px;
